      of _valid_version for definedness and not the boolean value
      (Closes: #345005)
    + [FL] Better check for false postives of build-depends-without-arch-dep.
      Should fix false positives for cdbs, dbs, dpatch and yada. Based on
      a patch by Russ Allbery (Closes: #344609, #321135, #339750)
  * checks/fields.desc:
    + [JvW] Fix typo in description

 -- Jeroen van Wolffelaar <jeroen@wolffelaar.nl>  Sun, 18 Dec 2005 03:40:15 +0100

lintian (1.23.14) unstable; urgency=low
  
  * The "fix those frontend regressions" release

  * frontend/lintian:
    + [FL] Fix exit status computing so that we exit with 1 again
      if we found any error. (Closes: #329458)
    + [FL] Re-enable reporting unused overrides.
  
  * lib/Tags.pm:
    + [FL] Some fixes to the statistics code to make the fixes
      in frontend/lintian possible
  
  * checks/binaries{.desc,}:
    + [FL] support c2a suffix in soname check, too (Closes: #340856)
    + [FL] fix typo in description of package-name-doesnt-match-sonames
      (Closes: #339360)
    + [FL] The Debian specific patches from coreutils to call strip with
      --remove-section arguments on install -s have been dropped. Adapt
      description of binary-has-unneeded-section accordingly and demote
      it to "info" because many packages will get this now.
  * checks/debconf{.desc,}:
    + [FL] drop seen-flag-requires-versioned-depends and
      multiselect-without-dependency and drop version requirement from
      missing-debconf-dependency-for-preinst. All due to the fact that
      woody shipped with 1.0.x and therefor versioned depends on versions
      lesser than that don't make much sense anymore (Closes: #333736)
  * checks/debhelper:
    + [FL] debhelper compat level 3 is deprecated as well now (Closes: #340222)
  * checks/files:
    + [FL] forgot /lib(32|64) (more #328612 fixes)
  * checks/menu-format:
    + [FL] Drop su-to-root-with-usr-bin and su-to-root-without-usr-sbin,