@@ -17,8 +17,13 @@ lintian (1.23.15) UNRELEASED; urgency=low
       a patch by Russ Allbery (Closes: #344609, #321135, #339750)
   * checks/fields.desc:
     + [JvW] Fix typo in description
+  * checks/init.d:
+    + [FL] Only try to validate update-rc.d calls where the name of the
+      script matches [\w.-]+. That accounts for all today known init
+      scripts and eliminates false postives like shell variables in the
+      name (Closes: #343865)
 
- -- Jeroen van Wolffelaar <jeroen@wolffelaar.nl>  Sun, 18 Dec 2005 03:40:15 +0100
+ -- Frank Lichtenheld <djpig@debian.org>  Wed,  4 Jan 2006 16:02:50 +0100
 
 lintian (1.23.14) unstable; urgency=low
   
